--- a/browser/package.json
+++ b/browser/package.json
@@ -17,14 +17,17 @@
     "@types/geojson": "^7946.0.14",
     "@types/leaflet": "^1.9.8",
     "axios": "^1.6.7",
+    "echarts": "^5.5.0",
     "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
+    "vue-echarts": "^6.6.9",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
+    "@types/echarts": "^4.9.22",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.10",
     "@vitejs/plugin-vue": "^5.0.3",
