--- a/browser/package.json
+++ b/browser/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@types/geojson": "^7946.0.14",
     "@types/leaflet": "^1.9.8",
+    "@vueuse/core": "^10.9.0",
     "axios": "^1.6.7",
     "echarts": "^5.5.0",
+    "element-plus": "^2.6.3",
     "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
@@ -40,6 +42,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^24.0.0",
+    "naive-ui": "^2.38.1",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
     "sass": "^1.71.1",
