--- a/browser/tsconfig.app.json
+++ b/browser/tsconfig.app.json
@@ -1,6 +1,8 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue","src/types/index.d.ts"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue","src/types/index.d.ts",
+    "src/components/LoginSystem/*.vue"
+  ],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
