--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,11 +1,24 @@
+aiomysql==0.2.0
+aioredis==2.0.1
+asgiref==3.8.1
+async-timeout==4.0.3
 blinker==1.7.0
 click==8.1.7
-colorama==0.4.6
+colorama
 Flask==3.0.2
 Flask-Cors==4.0.0
+Flask-Mail==0.9.1
+iniconfig
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+numpy==1.26.4
+packaging
+pluggy
+PyMySQL==1.1.0
+pytest
+redis==5.0.3
 setuptools==68.2.2
+typing_extensions==4.11.0
 Werkzeug==3.0.2
 wheel==0.41.2
