--- a/browser/package.json
+++ b/browser/package.json
@@ -21,6 +21,7 @@
     "echarts": "^5.5.0",
     "element-plus": "^2.6.3",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-baidu-map-3x": "^1.0.37",
