--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,24 +1,43 @@
 aiomysql==0.2.0
 aioredis==2.0.1
+annotated-types==0.7.0
+anyio==4.4.0
 asgiref==3.8.1
 async-timeout==4.0.3
 blinker==1.7.0
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
-colorama
+colorama==0.4.6
+dnspython==2.6.1
 Flask==3.0.2
 Flask-Cors==4.0.0
 Flask-Mail==0.9.1
-iniconfig
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+motor==3.4.0
 numpy==1.26.4
-packaging
-pluggy
+packaging==24.0
+pluggy==1.5.0
+pydantic==2.7.3
+pydantic_core==2.18.4
+PyJWT==2.8.0
+pymongo==4.7.2
 PyMySQL==1.1.0
-pytest
+pytest==8.2.1
 redis==5.0.3
+requests==2.32.3
 setuptools==68.2.2
+sniffio==1.3.1
 typing_extensions==4.11.0
+urllib3==2.2.1
 Werkzeug==3.0.2
 wheel==0.41.2
+zhipuai==2.1.0.20240521
